🐝 fixup: forgotten z-index

--- a/stylus/components/modals.styl
+++ b/stylus/components/modals.styl
@@ -11,6 +11,7 @@
 
 $modals
     modal-width = 30rem
+    position relative
     z-index $modal-index
 
     .coz-modal-wrapper
